--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,4 +16,21 @@ services:
       - 3000
     env_file:
       - .env
+    depends_on:
+      - postgres
     command: sh -c "npm run start:dev"
+
+  postgres:
+    container_name: shortener_db
+    image: postgres:14.1-alpine
+    ports:
+      - 5432:5432
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: shortener_db
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
