--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "teddy-finance",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Matheus Gomes",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -17,14 +17,20 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "migration:create": "npx prisma migrate dev --create-only --name",
+    "migration:deploy": "npx prisma migrate deploy",
+    "prisma:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@nestjs-cls/transactional": "^2.7.0",
+    "@nestjs-cls/transactional-adapter-prisma": "^1.2.20",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.5",
+    "@prisma/client": "^6.6.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.2",
@@ -52,6 +58,7 @@
     "jest": "^29.7.0",
     "lefthook": "^1.11.11",
     "prettier": "^3.4.2",
+    "prisma": "^6.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
@@ -79,5 +86,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "prisma": {
+    "schema": "src/infra/database/sql/prisma/schema.prisma"
   }
 }
