chore: add new envs into .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
-
-# API ENVS
+# API 
 NODE_ENV=development
 API_DOMAIN=http://localhost:3000
 
 # DATABASE
 DATABASE_URL="postgresql://postgres:postgres@postgres:5432/shortener_db?schema=public"
+
+# JWT
+JWT_SECRET="d3ddcb0c"
+JWT_EXPIRATION="3h"
