chore: add jwt envs into env.test

--- a/.env.test
+++ b/.env.test
@@ -5,3 +5,7 @@ API_DOMAIN=http://localhost:3000
 
 # DATABASE
 DATABASE_URL="postgresql://postgres:postgres@localhost:5432/shortener_db_test?schema=public"
+
+# JWT
+JWT_SECRET="d3ddcb0c"
+JWT_EXPIRATION="3h"
