chore: update .env.example

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ DATABASE_URL="postgresql://postgres:postgres@postgres:5432/shortener_db?schema=p
 # JWT
 JWT_SECRET="d3ddcb0c"
 JWT_EXPIRATION="3h"
+
+# OPENTELEMETRY - HONEYCOMB
+OTEL_SERVICE_NAME=
+OTEL_EXPORTER_OTLP_PROTOCOL=
+OTEL_EXPORTER_OTLP_ENDPOINT=
+OTEL_EXPORTER_OTLP_HEADERS=
